test/bjy/_unsupported/ill-typed/ad_hoc_polymorphism.reasons.s
(
Type_casing
Polymorphic_types
)